[gd_scene load_steps=6 format=2]

[ext_resource path="res://Objects/Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Tileset/fire_tileset.tres" type="TileSet" id=2]
[ext_resource path="res://Scripts/LevelLogic/Bullet.gd" type="Script" id=3]
[ext_resource path="res://Assets/Audio/mixkit-quick-positive-video-game-notification-interface-265.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1472, 264 )

[node name="Bullet" type="Node2D"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -1040.0
margin_top = -392.0
margin_right = 2048.0
margin_bottom = 1432.0
color = Color( 0.760784, 0.760784, 0.72549, 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
format = 1
tile_data = PoolIntArray( 589825, 24, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 25, 0 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
margin_left = -1592.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 0.0784314 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 512, 504 )

[node name="EnemySpawn" type="Node2D" parent="."]
position = Vector2( -200, 525 )

[node name="EnemySpawn2" type="Node2D" parent="."]
position = Vector2( 1360, 400 )

[node name="DeathZone" type="Area2D" parent="."]
position = Vector2( -1, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathZone"]
position = Vector2( 576, 1160 )
shape = SubResource( 1 )

[node name="Coundown" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Coundown"]
stream = ExtResource( 4 )

[connection signal="body_entered" from="DeathZone" to="." method="_on_DeathZone_body_entered"]
[connection signal="timeout" from="Coundown" to="." method="_on_Coundown_timeout"]
